Polish lecture 1 and fix errors in lecture 5

--- a/website/lectures/lecture4.qmd
+++ b/website/lectures/lecture4.qmd
@@ -379,7 +379,7 @@ We can also visualize these estimates
 
 ## Tree-based modeling
 
-<!-- interactions are hard! --> 
+<!-- interactions are hard! 
 
 ```{r get_vars}
 
@@ -455,3 +455,4 @@ test_preds <-
 
 ## OK, but here are two passes that from the same distance but 
 
+-->
